
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* strchr (char*,char) ;
 long strtol (char*,char**,int) ;

__attribute__((used)) static char *get_port(char *host)
{
 char *end;
 char *p = strchr(host, ':');

 if (p) {
  long port = strtol(p + 1, &end, 10);
  if (end != p + 1 && *end == '\0' && 0 <= port && port < 65536) {
   *p = '\0';
   return p+1;
  }
 }

 return ((void*)0);
}
