; ModuleID = '/home/carl/AnghaBench/git/extr_connect.c_get_port.c'
source_filename = "/home/carl/AnghaBench/git/extr_connect.c_get_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @get_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_port(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i8* @strchr(i8* %7, i8 signext 58)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %35

11:                                               ; preds = %1
  %12 = load i8*, i8** %5, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 1
  %14 = call i64 @strtol(i8* %13, i8** %4, i32 10)
  store i64 %14, i64* %6, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 1
  %18 = icmp ne i8* %15, %17
  br i1 %18, label %19, label %34

19:                                               ; preds = %11
  %20 = load i8*, i8** %4, align 8
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %19
  %25 = load i64, i64* %6, align 8
  %26 = icmp sle i64 0, %25
  br i1 %26, label %27, label %34

27:                                               ; preds = %24
  %28 = load i64, i64* %6, align 8
  %29 = icmp slt i64 %28, 65536
  br i1 %29, label %30, label %34

30:                                               ; preds = %27
  %31 = load i8*, i8** %5, align 8
  store i8 0, i8* %31, align 1
  %32 = load i8*, i8** %5, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 1
  store i8* %33, i8** %2, align 8
  br label %36

34:                                               ; preds = %27, %24, %19, %11
  br label %35

35:                                               ; preds = %34, %1
  store i8* null, i8** %2, align 8
  br label %36

36:                                               ; preds = %35, %30
  %37 = load i8*, i8** %2, align 8
  ret i8* %37
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i64 @strtol(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
